--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %} {% load static %} {% block content %}
 
-<div x-data="{ isLoading: false }" class="max-w-2xl min-h-[75vh] flex flex-col justify-center mx-auto text-center p-4">
+<div x-data="{ isUploading: false }" class="max-w-2xl min-h-[75vh] flex flex-col justify-center mx-auto text-center p-4">
   <h1 class="text-5xl font-bold uppercase tracking-widest">
     Discover Your
     <span class="bg-[var(--color-brand-yellow)] px-2">Reading DNA</span>
@@ -127,7 +127,7 @@
     </form>
 
     <div
-      x-show="isLoading"
+      x-show="isUploading"
       x-cloak
       x-transition
       class="mt-8 bg-white p-8 border-2 border-[var(--color-brand-text)] shadow-neo"
