--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </nav>
-        <main class="container mx-auto p-6 flex-grow flex flex-col justify-center">
+        <main class="container mx-auto p-6 flex-grow">
             {% if messages %}
                 {% for message in messages %}
                     <div x-data="{ show: true }" x-init="setTimeout(() => show = false, 8000)" x-show="show" class="relative p-4 mb-6 border-2 border-brand-text shadow-neo text-lg font-bold
