--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -21,7 +21,13 @@
                     {% for field in form %}
                         <div>
                             <label for="{{ field.id_for_label }}"
-                                   class="block text-xl font-bold uppercase mb-1">{{ field.label }}</label>
+                                   class="block text-xl font-bold uppercase mb-1">
+                                {% if field.name == 'username' %}
+                                    Email
+                                {% else %}
+                                    {{ field.label }}
+                                {% endif %}
+                            </label>
                             <input type="{{ field.field.widget.input_type }}"
                                    name="{{ field.name }}"
                                    id="{{ field.id_for_label }}"
