--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,7 +12,9 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
-    <body class="bg-brand-background text-brand-text grid-background flex h-full flex-col font-sans antialiased">
+    <body
+        class="bg-brand-background text-brand-text grid-background flex h-full flex-col bg-red-500 font-sans antialiased"
+    >
         <nav class="p-4">
             <div class="container mx-auto flex items-center justify-between">
                 <a href="{% url 'core:home' %}" class="text-brand-text text-3xl font-bold tracking-widest uppercase">
